<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:fitsSystemWindows="true"
    tools:context=".Views.Fragments.SignUpFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/jost_bold"
            android:gravity="center_horizontal"
            android:letterSpacing="0.06"
            android:maxLines="1"
            android:text="@string/join_us_now"
            android:textAlignment="center"
            android:textColor="@color/textcolor"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/jost_medium"
            android:text="@string/email_address"
            android:textColor="@color/textcolor"
            android:textSize="16sp">

        </TextView>


        <EditText
            android:id="@+id/emailaddress"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/input_text"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:shadowColor="#51000000"
            android:shadowDx="0"
            android:shadowDy="2"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/jost_medium"
            android:text="@string/first_name"
            android:textColor="@color/textcolor"
            android:textSize="16sp">

        </TextView>


        <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/input_text"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:shadowColor="#51000000"
            android:shadowDx="0"
            android:shadowDy="2"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/jost_medium"
            android:text="@string/last_name"
            android:textColor="@color/textcolor"
            android:textSize="16sp">

        </TextView>


        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/input_text"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:shadowColor="#51000000"
            android:shadowDx="0"
            android:shadowDy="2"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/jost_medium"
            android:text="@string/phone_number"
            android:textColor="@color/textcolor"
            android:textSize="16sp">

        </TextView>


        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/input_text"
            android:ems="10"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:shadowColor="#51000000"
            android:shadowDx="0"
            android:shadowDy="2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/askforaccountButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/button_ask_for_account"
            android:fontFamily="@font/jost_bold"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:shadowColor="#51000000"
            android:shadowDx="0"
            android:shadowDy="2"
            android:text="@string/ask_for_account_button"
            android:textColor="@color/textcolor" />

        <TextView
            android:id="@+id/login_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/button"
            android:fontFamily="@font/jost_bold"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:shadowColor="#51000000"
            android:shadowDx="0"
            android:shadowDy="2"
            android:text="@string/login"
            android:textColor="@color/white" />


    </LinearLayout>
</FrameLayout>
