<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundcolor2"
    tools:context=".Views.Fragments.SingleCourseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="11">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/player_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            app:controller_layout_id="@layout/exoplayer_controller"
            app:fastforward_increment="5000"
            app:resize_mode="fit"
            app:rewind_increment="5000"
            app:use_controller="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:weightSum="3">

            <TextView
                android:id="@+id/chapters"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/arrow_shape"
                android:fontFamily="@font/jost_medium"
                android:gravity="center_vertical"
                android:shadowColor="#51000000"
                android:shadowDx="0"
                android:shadowDy="2"
                android:text="@string/chapters"
                android:textAlignment="center"
                android:textColor="@color/black"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/arrow_shape"
                android:fontFamily="@font/jost_medium"
                android:gravity="center_vertical"
                android:shadowColor="#51000000"
                android:shadowDx="0"
                android:shadowDy="2"
                android:text="@string/about"
                android:textAlignment="center"
                android:textColor="@color/black"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/discussions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/arrow_shape"
                android:fontFamily="@font/jost_medium"
                android:gravity="center_vertical"
                android:shadowColor="#51000000"
                android:shadowDx="0"
                android:shadowDy="2"
                android:text="@string/discussions"
                android:textAlignment="center"
                android:textColor="@color/black"
                tools:ignore="RtlCompat" />
        </LinearLayout>


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/courses_viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"></androidx.viewpager.widget.ViewPager>

    </LinearLayout>
</FrameLayout>