<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:fitsSystemWindows="true"
    tools:context=".Views.Fragments.LoginFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/jost_bold"
            android:gravity="center_horizontal"
            android:letterSpacing="0.06"
            android:maxLines="1"
            android:text="@string/hey_welcome_back"
            android:textAlignment="center"
            android:textColor="@color/textcolor"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/jost_medium"
            android:text="@string/email_address"
            android:textColor="@color/textcolor"
            android:textSize="16sp">

        </TextView>


        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/input_text"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:shadowColor="#11000000"
            android:shadowDx="0"
            android:shadowDy="1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/jost_medium"
            android:text="@string/password"
            android:textColor="@color/textcolor"
            android:textSize="16sp">

        </TextView>


        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/input_text"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:shadowColor="#11000000"
            android:shadowDx="0"
            android:shadowDy="1"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2.2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/jost_regular"
                    android:text="Forget your "
                    android:textColor="@color/textcolor"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/jost_regular"
                    android:text="@string/password"
                    android:textColor="@color/passwordcolor"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/jost_regular"
                    android:text=" !"
                    android:textColor="@color/textcolor"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/button"
            android:fontFamily="@font/jost_bold"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:shadowColor="#51000000"
            android:shadowDx="0"
            android:shadowDy="2"
            android:text="@string/login"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="1sp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/connectwith"
                android:gravity="center"
                android:orientation="horizontal"></LinearLayout>

            <TextView
                android:id="@+id/connect_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/jost_regular"
                android:text="@string/or_connect_with"
                android:textAlignment="center"
                android:textColor="@color/connectwith"
                android:textSize="12sp"
                app:autoSizeTextType="uniform" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="1sp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/connectwith"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <RelativeLayout
                android:id="@+id/facebook_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/btnfacebook"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:id="@+id/img_logo_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:src="@drawable/facebook_3" />

                    <TextView
                        android:id="@+id/txt_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@id/img_logo_facebook"
                        android:fontFamily="@font/jostsemibold"
                        android:text="Facebook"
                        android:textColor="@color/facebook"
                        android:textSize="14sp"
                        app:autoSizeTextType="uniform" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/google_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/btngoogle"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:id="@+id/img_logo_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:src="@drawable/google_symbol" />

                    <TextView
                        android:id="@+id/txt_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@id/img_logo_google"
                        android:fontFamily="@font/jostsemibold"
                        android:text="Google"
                        android:textColor="@color/facebook"
                        android:textSize="14sp"
                        app:autoSizeTextType="uniform" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>
</FrameLayout>